# villani-code

./: .gitignore  CODE_REVIEW.md  README.md  getting-started.md  mind-motive  pyproject.toml
.github/workflows/: ci.yml  headless.yml
benchmark_tasks/: README.md
benchmark_tasks/constrained_model/: pack.json  task_01.json  task_02.json  task_03.json  task_04.json  task_05.json  task_06.json  task_07.json  task_08.json
benchmark_tasks/general_coding/: api_wrapper_fix.json  pack.json  (+14 more)
docs/: agents.md  benchmark.md  checkpointing.md  hooks.md  keybindings.md  mcp.md  permissions.md  project-explainer-and-architecture.md  refactor-todo.md  settings.md  skills.md  ui-components.md
tests/: test_agents_claude_adapter_run.py  test_agents_claude_capabilities.py  test_agents_claude_hook_settings.py  test_agents_claude_hook_wrapper.py  test_agents_claude_hooks.py  test_agents_claude_stdout_postprocess.py  test_agents_workspace_diff.py  test_anthropic_client.py  test_autonomous.py  test_autonomy_summary.py  test_autonomy_systems.py  test_benchmark_agent_skip_behavior.py  test_benchmark_agents.py  test_benchmark_cli_flags.py  test_benchmark_fairness.py  test_benchmark_false_negatives.py  test_benchmark_hardening.py  test_benchmark_prompt_contract.py  test_benchmark_reliability.py  test_benchmark_reporting.py  test_benchmark_runner_smoke.py  test_benchmark_runtime.py  test_benchmark_scoring.py  test_benchmark_system.py  test_benchmark_task_loader.py  test_benchmark_transcript_validation.py  test_benchmark_validation_execution.py  test_benchmark_verifier.py  test_bounded_execution.py  test_checkpoints.py  test_cli_debug_flags.py  test_cli_headless_optional_tui.py  test_cli_response_rendering.py  test_context_governance.py  test_debug_mode_and_recorder.py  test_diff_stats.py  test_eval_harness.py  test_evidence.py  test_hardening_pass.py  test_hooks.py  (+45 more)
ui/: diff_viewer.py  settings.py  themes.py
villani_code/: __init__.py  anthropic_client.py  autonomous.py  autonomous_helpers.py  autonomous_progress.py  autonomous_reporting.py  autonomous_stop.py  autonomy.py  checkpoints.py  cli.py  cli_subcommands.py  context_governance.py  context_projection.py  debug_artifacts.py  debug_recorder.py  edits.py  eval_harness.py  evidence.py  execution.py  hooks.py  interactive.py  interrupts.py  live_display.py  mcp.py  mission_state.py  optional_tui.py  patch_apply.py  permissions.py  plan_session.py  planning.py  plugins.py  project_memory.py  prompting.py  repair.py  runtime_events.py  runtime_safety.py  shells.py  skills.py  state.py  state_execution.py  (+10 more)
(+304 files in other folders)
