[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "villani-code"
version = "0.1.0"
description = "Minimal Anthropic-compatible local agent runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7"
]

[project.scripts]
villani-code = "villani_code.cli:app"

[tool.setuptools.packages.find]
include = ["villani_code*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
