[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "villani-code"
version = "0.1.0"
description = "Production-grade Villani Code terminal agent runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "textual>=8.0.0",
  "pyyaml>=6.0"
]

[project.scripts]
villani-code = "villani_code.cli:app"

[tool.setuptools.packages.find]
include = ["villani_code*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
