[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "villani-code"
version = "0.1.0"
description = "Disciplined small-model-first coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "pyyaml>=6.0",
  "requests>=2.31"
]

[project.optional-dependencies]
tui = [
  "textual>=8.0.0,<9.0.0",
]
all = [
  "textual>=8.0.0,<9.0.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[project.scripts]
villani-code = "villani_code.cli:app"

[tool.setuptools.packages.find]
include = ["villani_code*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F"]
ignore = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["villani_code.skills", "villani_code.subagents"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["villani_code.permissions", "villani_code.repo_rules", "villani_code.mcp", "villani_code.state"]
ignore_errors = true
